[tool.poetry]
name = "musicapy"
version = "2.1.0"
description = "Python wrapper for several music platforms API"
authors = ["Dhrumil Mistry <56185972+dmdhrumilmistry@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
requests = "^2.28.2"
wget = "^3.2"
sphinx = {version = "^6.1.3", optional = true}
sphinx-rtd-theme = {version = "^1.2.0", optional = true}
myst-parser = {version = "^1.0.0", optional = true}


[tool.poetry.extras]
docs = ["sphinx", "sphinx-rtd-theme", "myst-parser"]


[tool.poetry.urls]
"Home" = "https://github.com/dmdhrumilmistry/MusicAPy"
"Bug Tracker" = "https://github.com/dmdhrumilmistry/MusicAPy/issues"
"Support" = "https://github.com/sponsors/dmdhrumilmistry/"
"PayPal" = "https://paypal.me/dmdhrumilmistry"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
